--- a/templates/navebar.html
+++ b/templates/navebar.html
@@ -7,9 +7,9 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    >
+    />
     <title>Expandable Content</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <style>
       body {
         margin: 0;
@@ -76,7 +76,7 @@
   <body>
     <div class="navbar-container">
       <div class="navbar">
-        <a href="http://127.0.0.1:8000/"><i class="fas fa-home"></i></a>
+        <a href="home"><i class="fas fa-home"></i></a>
         <a href="event">กิจกรรม</a>
         <a href="contact">สอบถาม</a>
         <a href="register">ลงทะเบียน</a>
