--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #421a81;
-      background-image: url(https://scontent.fnak2-1.fna.fbcdn.net/v/t39.30808-6/450054923_863881429118803_2906487664665253319_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeFuH1MofrVNCIDEWSpNTtyIqsedekKzGdyqx516QrMZ3DbZmSPPCM8QvVcZfncBgt8XO-UguknPcdRmHA_10mgL&_nc_ohc=X1azCQihUwgQ7kNvgFI0XeT&_nc_ht=scontent.fnak2-1.fna&_nc_gid=A34h7OttkbCO35mmG2fhgnR&oh=00_AYDl79hqqBpeJISIsZNxc2dQ14b3BbZLxAzkID-LoQLHeg&oe=66EDD4C8);
+      background-image: url(https://i.pinimg.com/736x/f9/c3/71/f9c371339f28f9d5c26b75ade2241811.jpg);
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
