--- a/templates/home.html
+++ b/templates/home.html
@@ -3,13 +3,13 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #421a81;
-      background-image: url(https://scontent.fnak2-1.fna.fbcdn.net/v/t39.30808-6/450054923_863881429118803_2906487664665253319_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeFuH1MofrVNCIDEWSpNTtyIqsedekKzGdyqx516QrMZ3DbZmSPPCM8QvVcZfncBgt8XO-UguknPcdRmHA_10mgL&_nc_ohc=X1azCQihUwgQ7kNvgFI0XeT&_nc_ht=scontent.fnak2-1.fna&_nc_gid=A34h7OttkbCO35mmG2fhgnR&oh=00_AYDl79hqqBpeJISIsZNxc2dQ14b3BbZLxAzkID-LoQLHeg&oe=66EDD4C8);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      color: white;
+     font-family: Arial, sans-serif;
+     background-color: #421a81;
+     background-image: url(https://scontent.fnak2-1.fna.fbcdn.net/v/t39.30808-6/450054923_863881429118803_2906487664665253319_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=7d2PHRifyy8Q7kNvgGWCPzM&_nc_ht=scontent.fnak2-1.fna&_nc_gid=AF6WA0FjVxpw-17XU1bQPKa&oh=00_AYDCA7cTKaE3KvmHmIkFPEsKNX_ZqVbu6TFzu6RPUqHXNQ&oe=66F97A08);
+     background-size: cover;
+     background-position: center;
+     background-repeat: no-repeat;
+     color: white;
     }
 
     .fade-in {
