--- a/templates/navebar.html
+++ b/templates/navebar.html
@@ -76,22 +76,7 @@
   <body>
     <div class="navbar-container">
       <div class="navbar">
-        <a href="">    }
-    </style>
-  </head>
-  <body>
-    <div class="navbar-container">
-      <div class="navbar">
-        <a href="">https://yyyy-eta.vercel.app/<i class="fas fa-home"></i></a>
-        <a href="event">กิจกรรม</a>
-        <a href="contact">สอบถาม</a>
-        <a href="register">ลงทะเบียน</a>
-        <a href="login">เข้าสู่ระบบ</a>
-      </div>
-    </div>
-  </body>
-</html>
-{% block content %}{% endblock content %}<i class="fas fa-home"></i></a>
+        <a href=""><i class="fas fa-home"></i></a>
         <a href="event">กิจกรรม</a>
         <a href="contact">สอบถาม</a>
         <a href="register">ลงทะเบียน</a>
