--- a/templates/navebar.html
+++ b/templates/navebar.html
@@ -76,7 +76,7 @@
   <body>
     <div class="navbar-container">
       <div class="navbar">
-        <a href=""><i class="fas fa-home"></i></a>
+        <a href="https://yyyy-eta.vercel.app/"><i class="fas fa-home"></i></a>
         <a href="event">กิจกรรม</a>
         <a href="contact">สอบถาม</a>
         <a href="register">ลงทะเบียน</a>
