--- a/templates/event.html
+++ b/templates/event.html
@@ -111,18 +111,17 @@
           class="news-img"
           id="news-img-1"
         />
-        <h2>หัวข้อข่าว 1</h2>
+        <h2>งานโรโบติก ปี66 </h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-          convallis orci a augue vehicula, a convallis urna feugiat.
+          สถานที่จัดงาน มหาวิทยาลัยราชภัฏศรีสะเกษ
         </p>
         <button onclick="toggleDetails('news-1', this)">รายละเอียด</button>
         <div class="news-details" id="news-1">
           <p>
-            รายละเอียดเพิ่มเติมของข่าว 1 Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nullam convallis orci a augue vehicula, a convallis
-            urna feugiat. Phasellus lacinia felis ac turpis euismod, a dignissim
-            libero vulputate.
+          เป็นกิจกรรมที่จัดขึ้นส่งเสริมเยาวชนเกี่ยวกับ
+          การออกแบบ สร้าง และใช้งานหุ่นยนต์ โดยหุ่นยนต์สามารถทำงานอัตโนมัติหรือทำงานแทนมนุษย์ในงานต่าง ๆ 
+          ซึ่งอาจเป็นงานในอุตสาหกรรม การแพทย์ การสำรวจ หรือการบริการ การพัฒนาโรโบติกเกี่ยวข้องกับหลายสาขาวิชา 
+          เช่น วิศวกรรมเครื่องกล วิศวกรรมไฟฟ้า วิทยาการคอมพิวเตอร์ และปัญญาประดิษฐ์ (AI) 
           </p>
         </div>
       </div>
@@ -133,44 +132,19 @@
           class="news-img"
           id="news-img-2"
         />
-        <h2>หัวข้อข่าว 2</h2>
+        <h2>งานโรโบติก ปี67</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-          convallis orci a augue vehicula, a convallis urna feugiat.
+          สถานที่จัดงาน มหาวิทยาลัยราชภัฏศรีสะเกษ
         </p>
         <button onclick="toggleDetails('news-2', this)">รายละเอียด</button>
         <div class="news-details" id="news-2">
           <p>
-            รายละเอียดเพิ่มเติมของข่าว 2 Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nullam convallis orci a augue vehicula, a convallis
-            urna feugiat. Phasellus lacinia felis ac turpis euismod, a dignissim
-            libero vulputate.
+            การพัฒนาโรโบติกเป็นการผสมผสานของฮาร์ดแวร์
+            เช่น เซ็นเซอร์ มอเตอร์ และระบบไฟฟ้า รวมกับซอฟต์แวร์ เช่น การเขียนโปรแกรมและปัญญาประดิษฐ์
+            เพื่อให้หุ่นยนต์สามารถทำงานและตอบสนองต่อสิ่งแวดล้อมได้อย่างมีประสิทธิภาพ
           </p>
         </div>
       </div>
-      <div class="news-item">
-        <img
-          src="https://i.pinimg.com/736x/21/73/18/217318dc3ee16c87793cbcb4bae737ba.jpg"
-          alt="ข่าว 3"
-          class="news-img"
-          id="news-img-3"
-        />
-        <h2>หัวข้อข่าว 3</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-          convallis orci a augue vehicula, a convallis urna feugiat.
-        </p>
-        <button onclick="toggleDetails('news-3', this)">รายละเอียด</button>
-        <div class="news-details" id="news-3">
-          <p>
-            รายละเอียดเพิ่มเติมของข่าว 3 Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nullam convallis orci a augue vehicula, a convallis
-            urna feugiat. Phasellus lacinia felis ac turpis euismod, a dignissim
-            libero vulputate.
-          </p>
-        </div>
-      </div>
-    </div>
   </div>
 
   <script>
