--- a/templates/contact.html
+++ b/templates/contact.html
@@ -145,11 +145,11 @@
 
       <div class="social-links">
         <p>ติดต่อเราผ่านทาง:</p>
-        <a href="https://www.facebook.com" class="facebook" target="_blank">
+        <a href="https://www.facebook.com/comsci.sskru" class="facebook" target="_blank">
           Facebook</a
         >
-        <a href="https://line.me" class="line" target="_blank"> Line</a>
-        <a href="https://www.tiktok.com" class="tiktok" target="_blank">
+        <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=793ozxpi" class="line" target="_blank"> Line</a>
+        <a href="https://www.tiktok.com/@comsciencesskru?_t=8qN516gPReU&_r=1" class="tiktok" target="_blank">
           TikTok</a
         >
       </div>
