--- a/templates/contact.html
+++ b/templates/contact.html
@@ -155,7 +155,7 @@
       </div>
 
       <div class="back-link">
-        <p><a href="home">กลับไปหน้าหลัก</a></p>
+        <p><a href="https://yyyy-eta.vercel.app/">กลับไปหน้าหลัก</a></p>
       </div>
     </div>
   </div>
